--- a/static/header.html
+++ b/static/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="container header-inner">
-    <a class="brand" href="/static/FathomWeb.html#top">
+    <a class="brand" href="/static/index.html#top">
       <span class="brand-mark">
         <img src="/static/images/logosign.svg" class="logosign">
       </span>
@@ -12,11 +12,11 @@
     </button>
 
     <nav class="site-nav" id="siteNav">
-      <a href="/static/FathomWeb.html#platform">Platform</a>
-      <a href="/static/FathomWeb.html#mission">Mission</a>
-      <a href="/static/FathomWeb.html#tech">Tech</a>
-      <a href="/static/FathomWeb.html#products">Products</a>
-      <a class="cta" href="/static/FathomWeb.html#contact">Contact</a>
+      <a href="/static/index.html#platform">Platform</a>
+      <a href="/static/index.html#mission">Mission</a>
+      <a href="/static/index.html#tech">Tech</a>
+      <a href="/static/index.html#products">Products</a>
+      <a class="cta" href="/static/index.html#contact">Contact</a>
     </nav>
   </div>
 </header>
