--- a/static/index.html
+++ b/static/index.html
@@ -8,10 +8,10 @@
   <title>Fathom Robotics</title>
 
     <!-- body and base styles -->
-   <link rel="stylesheet" href="/static/css/main.css">
+   <link rel="stylesheet" href="static/css/main.css">
     <!-- Favicon -->
-    <link rel="icon" href="/static/images/favicon.svg" type="image/svg+xml">
-    <link rel="icon" href="/static/images/favicon.ico">
+    <link rel="icon" href="static/images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="static/images/favicon.ico">
 
 </head>
 
@@ -684,7 +684,7 @@
           <div id="canabus-mini-card-placeholder"></div>
           <div class="card" id="e-stop-card">
             <h3>E-STOP Receiver</h3>
-             <img src="/static/images/e-stop.jpg" alt="E-stop" style="width:100%; border-radius:12px; margin-bottom:12px;">
+             <img src="static/images/e-stop.jpg" alt="E-stop" style="width:100%; border-radius:12px; margin-bottom:12px;">
             <h4>Core Operating Modes</h4>
             <p><strong>Mode 1: Standalone CAN Transceiver &amp; Protocol Translator</strong> Functions as an intelligent gateway, converting proprietary protocols into NMEA 2000 or JSON via Ethernet/Serial using proprietary .dbc files.</p>
             <p><strong>· Use Cases:</strong> Professional commercial USV operations, remote shore-based piloting, and fleet management (coming soon).</p>
@@ -784,9 +784,9 @@
         <h3 class="svg-modal-title">CANaBUS Mini</h3>
         <button class="svg-modal-close" type="button" aria-label="Close">×</button>
       </header>
-      <img src="/static/images/3.jpg" alt="CANaBUS Mini" style="width:100%; border-radius:12px; margin-bottom:12px;">
+      <img src="static/images/3.jpg" alt="CANaBUS Mini" style="width:100%; border-radius:12px; margin-bottom:12px;">
       <div class="svg-modal-body">A versatile marine CAN interface for autonomous and remotely operated vessels. It bridges legacy marine hardware with modern control systems, supporting ROS2, ArduPilot, and the Fathom Robotics USV Companion Interface while delivering real-time performance in harsh marine environments.</div>
-      <a class="svg-modal-link" href="/static/canabus-mini.html">Read full details</a>
+      <a class="svg-modal-link" href="static/canabus-mini.html">Read full details</a>
     </div>
 
     <div class="svg-modal" data-modal-id="canabas-mini-2" role="dialog" aria-modal="true">
@@ -795,7 +795,7 @@
         <button class="svg-modal-close" type="button" aria-label="Close">×</button>
       </header>
       <div class="svg-modal-body">A versatile marine CAN interface for autonomous and remotely operated vessels. It bridges legacy marine hardware with modern control systems, supporting ROS2, ArduPilot, and the Fathom Robotics USV Companion Interface while delivering real-time performance in harsh marine environments.</div>
-      <a class="svg-modal-link" href="/static/canabus-mini.html">Read full details</a>
+      <a class="svg-modal-link" href="static/canabus-mini.html">Read full details</a>
     </div>
 
     <div class="svg-modal" data-modal-id="antenna-2-text-part" role="dialog" aria-modal="true">
@@ -809,13 +809,13 @@
 
   </div>
 
-  <script src="/static/js/includes.js"></script>
+  <script src="static/js/includes.js"></script>
   <script>
     (async () => {
-      await loadFragment("/static/header.html", "site-header");
-      await loadFragment("/static/footer.html", "site-footer");
-      await loadFragment("/static/canabus-mini-section.html", "canabus-mini-card-placeholder");
-      await loadScript("/static/js/main.js");
+      await loadFragment("static/header.html", "site-header");
+      await loadFragment("static/footer.html", "site-footer");
+      await loadFragment("static/canabus-mini-section.html", "canabus-mini-card-placeholder");
+      await loadScript("static/js/main.js");
     })();
   </script>
 </body>
