No code changes

--- a/static/footer.html
+++ b/static/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="container footer-inner">
     <span>© <span id="year"></span> Fathom Robotics</span>
-    <a href="#top">Back to top</a>
+    <a href="#top">Back to top ↑</a>
   </div>
 </footer>
