Refactor product sections in HTML for improved structure and styling

--- a/static/canabus-maximus.html
+++ b/static/canabus-maximus.html
@@ -11,16 +11,16 @@
   <main>
     <section class="section" id="canabus-maximus">
       <div class="container">
-        <h2>CANaBUS Maximus</h2>
+        <div class="text-title-lg">CANaBUS Maximus</div>
         <div class="card" id="canabus-maximus-card">
-          <h3>CANaBUS Maximus</h3>
-          <img src="images/canabus-maximus.png" alt="CANaBUS Maximus" style="width:100%; border-radius:12px; margin-bottom:12px;">
-          <h4>Core Capabilities</h4>
-          <p>High-capacity marine CAN backbone designed for system-grade deployments.</p>
-          <p><strong>· Interfaces:</strong> Multi-bus integration for engines, steering, and navigation subsystems.</p>
-          <p><strong>· Performance:</strong> Real-time processing optimized for redundant, mission-critical control paths.</p>
-          <p><strong>· Integration:</strong> Plays with ROS2, ArduPilot, and Fathom Robotics USV Companion workflows.</p>
-          <p><strong>· Enclosure:</strong> Ruggedized, marine-ready housing for harsh environments.</p>
+          <div class="text-title-md">CANaBUS Maximus</div>
+          <img class="product-image" src="images/canabus-maximus.png" alt="CANaBUS Maximus">
+          <div class="text-title-sm">Core Capabilities</div>
+          <div class="text-body">High-capacity marine CAN backbone designed for system-grade deployments.</div>
+          <div class="text-body"><span class="text-strong">· Interfaces:</span> Multi-bus integration for engines, steering, and navigation subsystems.</div>
+          <div class="text-body"><span class="text-strong">· Performance:</span> Real-time processing optimized for redundant, mission-critical control paths.</div>
+          <div class="text-body"><span class="text-strong">· Integration:</span> Plays with ROS2, ArduPilot, and Fathom Robotics USV Companion workflows.</div>
+          <div class="text-body"><span class="text-strong">· Enclosure:</span> Ruggedized, marine-ready housing for harsh environments.</div>
         </div>
       </div>
     </section>
