--- a/static/e-stop.html
+++ b/static/e-stop.html
@@ -11,16 +11,16 @@
   <main>
     <section class="section" id="e-stop">
       <div class="container">
-        <h2>E-STOP Receiver</h2>
+        <div class="text-title-lg">E-STOP Receiver</div>
         <div class="card" id="e-stop-card">
-          <h3>E-STOP Receiver</h3>
-          <img src="images/e-stop.png" alt="E-STOP Receiver" style="width:100%; border-radius:12px; margin-bottom:12px;">
-          <h4>Core Capabilities</h4>
-          <p>Dedicated safety channel for reliable remote stop control across marine systems.</p>
-          <p><strong>· Safety:</strong> Fast, deterministic stop signaling with isolation from primary control buses.</p>
-          <p><strong>· Integration:</strong> Compatible with autonomy stacks and manual override workflows.</p>
-          <p><strong>· Enclosure:</strong> Marine-grade build suitable for harsh operational environments.</p>
-          <p><strong>· Telemetry:</strong> Works with the Fathom Robotics USV Companion Interface for visibility and logging.</p>
+          <div class="text-title-md">E-STOP Receiver</div>
+          <img class="product-image" src="images/e-stop.png" alt="E-STOP Receiver">
+          <div class="text-title-sm">Core Capabilities</div>
+          <div class="text-body">Dedicated safety channel for reliable remote stop control across marine systems.</div>
+          <div class="text-body"><span class="text-strong">· Safety:</span> Fast, deterministic stop signaling with isolation from primary control buses.</div>
+          <div class="text-body"><span class="text-strong">· Integration:</span> Compatible with autonomy stacks and manual override workflows.</div>
+          <div class="text-body"><span class="text-strong">· Enclosure:</span> Marine-grade build suitable for harsh operational environments.</div>
+          <div class="text-body"><span class="text-strong">· Telemetry:</span> Works with the Fathom Robotics USV Companion Interface for visibility and logging.</div>
         </div>
       </div>
     </section>
