Refactor code structure for improved readability and maintainability

--- a/static/canabus-maximus.html
+++ b/static/canabus-maximus.html
@@ -14,7 +14,7 @@
         <div class="text-title-lg">CANaBUS Maximus</div>
         <div class="card" id="canabus-maximus-card">
           <div class="text-title-md">CANaBUS Maximus</div>
-          <img class="product-image" src="images/canabus-maximus.png" alt="CANaBUS Maximus">
+          <img class="product-image" src="images/canabus-maximus-hero.png" alt="CANaBUS Maximus">
           <div class="text-title-sm">Core Capabilities</div>
           <div class="text-body">High-capacity marine CAN backbone designed for system-grade deployments.</div>
           <div class="text-body"><span class="text-strong">· Interfaces:</span> Multi-bus integration for engines, steering, and navigation subsystems.</div>
