--- a/static/e-stop.html
+++ b/static/e-stop.html
@@ -12,9 +12,9 @@
     <section class="section" id="e-stop">
       <div class="container">
         <div class="text-title-lg">E-STOP Receiver</div>
+        <img class="product-image" src="images/e-stop-hero.png" alt="E-STOP Receiver">
+
         <div class="card" id="e-stop-card">
-          <div class="text-title-md">E-STOP Receiver</div>
-          <img class="product-image" src="images/e-stop.png" alt="E-STOP Receiver">
           <div class="text-title-sm">Core Capabilities</div>
           <div class="text-body">Dedicated safety channel for reliable remote stop control across marine systems.</div>
           <div class="text-body"><span class="text-strong">· Safety:</span> Fast, deterministic stop signaling with isolation from primary control buses.</div>
