--- a/static/canabus-maximus.html
+++ b/static/canabus-maximus.html
@@ -9,12 +9,13 @@
 <body>
   <div id="site-header"></div>
   <main>
+    <div class="product-hero" id="canabus-maximus-hero" style="--hero-bg: url('/static/images/canabus-maximus-hero.png')">
+      <div class="text-title-xl product-hero-title">CANaBUS<br>Maximus</div>
+    </div>
     <section class="section" id="canabus-maximus">
       <div class="container">
-        <div class="text-title-lg">CANaBUS Maximus</div>
+        <div class="text-title-lg">Core Capabilities</div>
         <div class="card" id="canabus-maximus-card">
-          <div class="text-title-md">CANaBUS Maximus</div>
-          <img class="product-image" src="images/canabus-maximus-hero.png" alt="CANaBUS Maximus">
           <div class="text-title-sm">Core Capabilities</div>
           <div class="text-body">High-capacity marine CAN backbone designed for system-grade deployments.</div>
           <div class="text-body"><span class="text-strong">· Interfaces:</span> Multi-bus integration for engines, steering, and navigation subsystems.</div>
