--- a/static/canabus-mini.html
+++ b/static/canabus-mini.html
@@ -9,12 +9,13 @@
 <body>
   <div id="site-header"></div>
   <main>
+    <div class="product-hero" id="canabus-mini-hero" style="--hero-bg: url('/static/images/canabus-mini-hero.png')">
+      <div class="text-title-xl product-hero-title">CANaBUS<br>Mini</div>
+    </div>
     <section class="section" id="canabus-mini">
       <div class="container">
-        <div class="text-title-lg">CANaBUS Mini</div>
+        <div class="text-title-lg">Core Operating Modes</div>
         <div class="card" id="canabus-mini-card">
-          <div class="text-title-md">CANaBUS Mini</div>
-          <img class="product-image" src="/static/images/canabus-mini-hero.png" alt="CANaBUS Mini">
           <div class="text-title-sm">Core Operating Modes</div>
           <div class="text-body"><span class="text-strong">Mode 1: Standalone CAN Transceiver &amp; Protocol Translator</span> Functions as an intelligent gateway, converting proprietary protocols into NMEA 2000 or JSON via Ethernet/Serial using proprietary .dbc files.</div>
           <div class="text-body"><span class="text-strong">· Use Cases:</span> Retrofitting legacy control elements and electronics into modern remotely controlled or autonomous systems.</div>
