--- a/static/e-stop.html
+++ b/static/e-stop.html
@@ -9,11 +9,12 @@
 <body>
   <div id="site-header"></div>
   <main>
+    <div class="product-hero" id="e-stop-hero" style="--hero-bg: url('/static/images/e-stop-hero.png')">
+      <div class="text-title-xl product-hero-title">E-STOP<br>Receiver</div>
+    </div>
     <section class="section" id="e-stop">
       <div class="container">
-        <div class="text-title-lg">E-STOP Receiver</div>
-        <img class="product-image" src="images/e-stop-hero.png" alt="E-STOP Receiver">
-
+        <div class="text-title-lg">Core Capabilities</div>
         <div class="card" id="e-stop-card">
           <div class="text-title-sm">Core Capabilities</div>
           <div class="text-body">Dedicated safety channel for reliable remote stop control across marine systems.</div>
