--- a/static/canabus-maximus.html
+++ b/static/canabus-maximus.html
@@ -197,6 +197,7 @@
     </section>
   </main>
 
+  <div id="product-picking"></div>
   <div id="site-footer"></div>
 
   <script src="js/includes.js"></script>
@@ -204,6 +205,7 @@
     (async () => {
       await loadFragment("header.html", "site-header");
       await loadFragment("footer.html", "site-footer");
+      await loadFragment("product-picking.html", "product-picking");
       initHeaderNav();
       setYear();
     })();
