--- a/static/canabus-mini.html
+++ b/static/canabus-mini.html
@@ -44,7 +44,8 @@
       </div>
     </section>
   </main>
-
+  
+  <div id="product-picking"></div>
   <div id="site-footer"></div>
 
   <script src="js/includes.js"></script>
@@ -52,6 +53,7 @@
     (async () => {
       await loadFragment("header.html", "site-header");
       await loadFragment("footer.html", "site-footer");
+      await loadFragment("product-picking.html", "product-picking");
       initHeaderNav();
       setYear();
     })();
