Add text ant rebuild site to include contact.html

--- a/static/header.html
+++ b/static/header.html
@@ -12,11 +12,11 @@
     </button>
 
     <nav class="site-nav" id="siteNav">
-      <a href="index.html#platform">Platform</a>
-      <a href="index.html#mission">Mission</a>
-      <a href="index.html#tech">Tech</a>
+     <!--   <a href="index.html#platform">Platform</a> -->
+      <a href="index.html#mission">Operational Capabilities</a>
+     <!--    <a href="index.html#tech">Tech</a> -->
       <a href="index.html#products">Products</a>
-      <a class="cta" href="index.html#contact">Contact</a>
+      <a href="index.html#contact">Contact</a>
     </nav>
   </div>
 </header>
