--- a/static/canabus-mini.html
+++ b/static/canabus-mini.html
@@ -46,6 +46,7 @@
   </main>
   
   <div id="product-picking"></div>
+  <div id="contact"></div>
   <div id="site-footer"></div>
 
   <script src="js/includes.js"></script>
@@ -53,6 +54,7 @@
     (async () => {
       await loadFragment("header.html", "site-header");
       await loadFragment("footer.html", "site-footer");
+      await loadFragment("contact.html", "contact");
       await loadFragment("product-picking.html", "product-picking");
       initHeaderNav();
       setYear();
