--- a/static/e-stop.html
+++ b/static/e-stop.html
@@ -31,6 +31,7 @@
   </main>
 
   <div id="product-picking"></div>
+  <div id="contact"></div>
   <div id="site-footer"></div>
 
   <script src="js/includes.js"></script>
@@ -38,6 +39,7 @@
     (async () => {
       await loadFragment("header.html", "site-header");
       await loadFragment("footer.html", "site-footer");
+      await loadFragment("contact.html", "contact");
       await loadFragment("product-picking.html", "product-picking");
       initHeaderNav();
       setYear();
