Update CSS styles for improved visual consistency and enhance header navigation links

--- a/static/header.html
+++ b/static/header.html
@@ -12,9 +12,8 @@
     </button>
 
     <nav class="site-nav" id="siteNav">
-     <!--   <a href="index.html#platform">Platform</a> -->
       <a href="index.html#mission">Operational Capabilities</a>
-     <!--    <a href="index.html#tech">Tech</a> -->
+      <a href="index.html#platform">Compliance & Certifications</a>
       <a href="index.html#products">Products</a>
       <a href="index.html#contact">Contact</a>
     </nav>
