Refactor code structure for E-Stop Description

--- a/static/canabus-mini.html
+++ b/static/canabus-mini.html
@@ -57,12 +57,12 @@
       <div class="container">
         <div class="text-title-lg">Key Highlights</div>
           <div class="grid-3">
-            <div class="text-body"><span class="text-strong">Multi-Protocol Marine Integration:</span> Interfaces with proprietary CAN protocols from major manufacturers like Volvo Penta, Yamaha, Mercury, Garmin, and Raymarine.</div>
-            <div class="text-body"><span class="text-strong">Triple Independent CAN Architecture:</span> Features three isolated CAN 2.0B interfaces for simultaneous, conflict-free connection to engine, steering, and navigation subsystems.</div>
-            <div class="text-body"><span class="text-strong">Industrial-Grade Build:</span> IP69K-rated automotive enclosure with marine-grade connectors and conformal-coated PCBs for harsh saltwater protection.</div>
-            <div class="text-body"><span class="text-strong">Real-Time Processing:</span> Powered by a 600MHz ARM Cortex-M7 delivering &lt;5ms latency, essential for safe autonomous response.</div>
-            <div class="text-body"><span class="text-strong">Flexible Operating Modes:</span> Supports four modes ranging from simple protocol translation via DBC files to full ROS2 autonomy integration.</div>
-            <div class="text-body"><span class="text-strong">Remote Web Interface:</span> Native compatibility with the Fathom Robotics USV Companion Interface for real-time telemetry, diagnostics, and piloting from any browser.</div>
+            <div class="text-body"><span class="text-strong">Multi-Protocol Marine Integration:</span> <br>Interfaces with proprietary CAN protocols from major manufacturers like Volvo Penta, Yamaha, Mercury, Garmin, and Raymarine.</div>
+            <div class="text-body"><span class="text-strong">Triple Independent CAN Architecture:</span> <br>Features three isolated CAN 2.0B interfaces for simultaneous, conflict-free connection to engine, steering, and navigation subsystems.</div>
+            <div class="text-body"><span class="text-strong">Industrial-Grade Build:</span> <br>IP69K-rated automotive enclosure with marine-grade connectors and conformal-coated PCBs for harsh saltwater protection.</div>
+            <div class="text-body"><span class="text-strong">Real-Time Processing:</span> <br>Powered by a 600MHz ARM Cortex-M7 delivering &lt;5ms latency, essential for safe autonomous response.</div>
+            <div class="text-body"><span class="text-strong">Flexible Operating Modes:</span> <br>Supports four modes ranging from simple protocol translation via DBC files to full ROS2 autonomy integration.</div>
+            <div class="text-body"><span class="text-strong">Remote Web Interface:</span> <br>Native compatibility with the Fathom Robotics USV Companion Interface for real-time telemetry, diagnostics, and piloting from any browser.</div>
           </div>
         </div>
       </div>
@@ -76,29 +76,29 @@
           <div class="card">
             <div class="text-body"><span class="text-strong">MODE 1:</span></div>
             <div class="text-body"><span class="text-strong">Standalone CAN Transceiver &amp; Protocol Translator</span> Functions as an intelligent gateway, converting proprietary protocols into NMEA 2000 or JSON via Ethernet/Serial using proprietary .dbc files.</div>
-            <div class="text-body"><span class="text-strong">• Use Cases:</span> Retrofitting legacy control elements and electronics into modern remotely controlled or autonomous systems.</div>
-            <div class="text-body"><span class="text-strong">• Key Features:</span> DBC file-based parsing, configurable routing, &lt;5ms latency, and control system agnostic.</div>
+            <div class="text-body"><span class="text-strong">• Use Cases:</span> <br>Retrofitting legacy control elements and electronics into modern remotely controlled or autonomous systems.</div>
+            <div class="text-body"><span class="text-strong">• Key Features:</span> <br>DBC file-based parsing, configurable routing, &lt;5ms latency, and control system agnostic.</div>
           </div>
 
           <div class="card">
             <div class="text-body"><span class="text-strong">MODE 2:</span></div>
             <div class="text-body"><span class="text-strong">ROS/ROS2 Integration Node</span> Acts as a dedicated hardware node within ROS architectures to expose marine CAN devices as native ROS entities.</div>
-            <div class="text-body"><span class="text-strong">• Use Cases:</span> Academic autonomy research, multi-sensor fusion, and computer vision/LIDAR integration.</div>
-            <div class="text-body"><span class="text-strong">• Key Features:</span> Custom device-specific ROS2 nodes, bidirectional sensor/control data flow, and Nav2/MoveIt compatibility.</div>
+            <div class="text-body"><span class="text-strong">• Use Cases:</span> <br>Academic autonomy research, multi-sensor fusion, and computer vision/LIDAR integration.</div>
+            <div class="text-body"><span class="text-strong">• Key Features:</span> <br>Custom device-specific ROS2 nodes, bidirectional sensor/control data flow, and Nav2/MoveIt compatibility.</div>
           </div>
 
           <div class="card">
             <div class="text-body"><span class="text-strong">MODE 3:</span></div>
             <div class="text-body"><span class="text-strong">Autopilot Integration (ArduPilot/QGC)</span> Connects industrial CAN hardware to open-source platforms like ArduPilot and QGroundControl.</div>
-            <div class="text-body"><span class="text-strong">• Use Cases:</span> Utilizing proven autonomy algorithms, waypoint mission planning, and MAVLink telemetry integration.</div>
-            <div class="text-body"><span class="text-strong">• Key Features:</span> MAVLink bridge for CAN, custom ArduPilot drivers, and support for ArduRover/ArduBoat firmware.</div>
+            <div class="text-body"><span class="text-strong">• Use Cases:</span> <br>Utilizing proven autonomy algorithms, waypoint mission planning, and MAVLink telemetry integration.</div>
+            <div class="text-body"><span class="text-strong">• Key Features:</span> <br>MAVLink bridge for CAN, custom ArduPilot drivers, and support for ArduRover/ArduBoat firmware.</div>
           </div>
 
           <div class="card">
             <div class="text-body"><span class="text-strong">MODE 4:</span></div>
             <div class="text-body"><span class="text-strong">Fathom Robotics USV Companion Interface (Recommended)</span> The most complete mode, pairing the device with the KiloWebInterface dashboard for unmanned vessel operations.</div>
-            <div class="text-body"><span class="text-strong">• Use Cases:</span> Professional commercial USV operations, remote shore-based piloting, and fleet management (coming soon).</div>
-            <div class="text-body"><span class="text-strong">• Key Features:</span> Zero-install web interface, real-time telemetry with custom widgets, &lt;100ms command latency, mission replay, and modular sensor fusion. Includes advanced payload release capabilities extending beyond the standard ArduPilot scope.</div>
+            <div class="text-body"><span class="text-strong">• Use Cases:</span> <br>Professional commercial USV operations, remote shore-based piloting, and fleet management (coming soon).</div>
+            <div class="text-body"><span class="text-strong">• Key Features:</span> <br>Zero-install web interface, real-time telemetry with custom widgets, &lt;100ms command latency, mission replay, and modular sensor fusion. Includes advanced payload release capabilities extending beyond the standard ArduPilot scope.</div>
           </div>
         </div>
       </div>
